--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -7,11 +7,11 @@ name: Docker
 
 on:
   push:
-    branches: [ main, backend ]
+    branches: [ main ]
     # Publish semver tags as releases.
     # tags: [ 'v*.*.*' ]
   pull_request:
-    branches: [ main, backend ]
+    branches: [ main ]
 
 env:
   # Use docker.io for Docker Hub if empty
