--- a/.github/workflows/msc.yml
+++ b/.github/workflows/msc.yml
@@ -1,41 +1,29 @@
 # This workflow will do a clean install of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Build Vue
+name: Convert mscz to svg
 
 on:
   push:
     paths:
-      - '**.vue'
-      - '**.ts'
-      - '**.js'
-      - '**.json'
-      - '**/build-vue.yml'
+      - '**.mscz'
+      - '**/msc.yml'
   pull_request:
     branches: [ main, vue ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      max-parallel: 1
-      matrix:
-        node-version: [14.x, 16.x]
 
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - name: Install packages
-      run: npm ci
-    - name: build
-      run: npx vue-cli-service build
+    - name: Install MuseScore 3
+      run: sudo apt-get update && sudo apt-get install musescore3
+    - name: Convert mscz to svg
+      working-directory: ./music
+      run: ./convert.sh
     - name: Archive production artifacts
       uses: actions/upload-artifact@v2
       with:
-        name: dist
-        path: |
-          dist
+        name: svgs
+        path: music/svg
