Moved music to build workflow.

--- a/.github/workflows/build-vue.yml
+++ b/.github/workflows/build-vue.yml
@@ -10,6 +10,7 @@ on:
       - '**.ts'
       - '**.js'
       - '**.json'
+      - '**.mscz'
       - '**/build-vue.yml'
   pull_request:
     branches: [ main, vue ]
@@ -17,6 +18,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    name: Build vue
+    needs: sheet-music
     strategy:
       max-parallel: 1
       matrix:
@@ -31,6 +34,11 @@ jobs:
         cache: 'npm'
     - name: Install packages
       run: npm ci
+    - name: Fetch sheet music artifacts
+      uses: actions/download-artifact@v2
+      with:
+        name: music-svgs
+        path: public/msvg
     - name: build
       run: npx vue-cli-service build
     - name: Archive production artifacts
@@ -39,3 +47,31 @@ jobs:
         name: dist
         path: |
           dist
+
+  
+  sheet-music:
+    runs-on: ubuntu-latest
+    name: Generate sheet music resources
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Use Node.js 16.x
+      uses: actions/setup-node@v2
+      with:
+        node-version: 16.x
+        cache: 'npm'
+    - name: Install svgo
+      run: npm install -g svgo
+    - name: Install MuseScore 3
+      run: sudo apt-get update && sudo apt-get install musescore3
+    - name: Convert mscz to svg
+      working-directory: ./music
+      run: ./convert.sh
+    - name: Compress svg:s
+      working-directory: ./music
+      run: ./compress.sh
+    - name: Archive production artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: music-svgs
+        path: music/svg
