--- a/.github/workflows/build-vue.yml
+++ b/.github/workflows/build-vue.yml
@@ -14,6 +14,12 @@ on:
       - '**/build-vue.yml'
   pull_request:
     branches: [ main, vue ]
+  workflow_dispatch:
+    inputs:
+      skip-compression:
+        description: 'Skip svg optimization (faster)'
+        required: true
+        default: "false"
 
 jobs:
   build:
@@ -68,9 +74,14 @@ jobs:
       run: npm install -g svgo
     - name: Install MuseScore 3
       run: sudo apt-get update && sudo apt-get install musescore3
+    - name: Convert mscz to non-compressed svg.s
+      working-directory: ./music
+      run: ./convert.sh --no-move
+      if: ${{ github.event.inputs.skip-compression }}
     - name: Convert mscz to compressed svg.s
       working-directory: ./music
       run: ./convert.sh --compress --no-move
+      if: ${{ !github.event.inputs.skip-compression }}
     - name: Perpare for export
       working-directory: ./music
       run: mv svgs.json svg
