Added some SEO.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sangbok",
-  "version": "0.1.0",
+  "version": "1.0.0rc1",
   "private": true,
   "scripts": {
     "start": "vue-cli-service serve",
