--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sangbok",
-  "version": "1.0.0rc2",
+  "version": "1.0.0rc3",
   "private": true,
   "scripts": {
     "start": "vue-cli-service serve",
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "copy-to-clipboard": "^3.3.1",
     "core-js": "^3.6.5",
     "jszip": "^3.7.1",
     "vue": "^3.0.0",
