--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jszip": "^3.7.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
+    "vue3-touch-events": "^4.1.0",
     "vuex": "^4.0.0-0",
     "vuex-persistedstate": "^4.1.0"
   },
