--- a/.github/workflows/build-vue.yml
+++ b/.github/workflows/build-vue.yml
@@ -17,7 +17,7 @@ on:
   workflow_dispatch:
     inputs:
       skip-compression:
-        description: 'Skip svg optimization (faster)'
+        description: "Skip svg optimization (faster) (this setting doesn't work)"
         required: true
         default: "false"
 
@@ -56,11 +56,9 @@ jobs:
         path: |
           dist
 
-  
   sheet-music:
     runs-on: ubuntu-latest
     name: Generate sheet music resources
-
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js 16.x
@@ -74,11 +72,11 @@ jobs:
       run: sudo apt-get update && sudo apt-get install musescore3
     - name: Convert mscz to non-compressed svg:s
       working-directory: ./music
-      run: ./convert.sh --no-move
+      run: ./convert.sh --no-move --force
       if: ${{ contains(github.event.inputs.skip-compression, 'true') }}
     - name: Convert mscz to compressed svg:s
       working-directory: ./music
-      run: ./convert.sh --compress --no-move
+      run: ./convert.sh --compress --no-move --force
       if: ${{ !contains(github.event.inputs.skip-compression, 'true') }}
     - name: Perpare for export
       working-directory: ./music
@@ -88,3 +86,18 @@ jobs:
       with:
         name: music-svgs
         path: music/svg
+
+  compression-benchmark:
+    runs-on: ubuntu-latest
+    name: Check compression ratios
+    needs: sheet-music
+    steps:
+    - uses: actions/checkout@v2
+    - name: Fetch sheet music artifacts
+      uses: actions/download-artifact@v2
+      with:
+        name: music-svgs
+        path: .github/workflows/svg
+    - name: Benchmark
+      working-directory: .github/workflows
+      run: ./compression-benchmark.sh
