--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sangbok",
-  "version": "1.0.0rc3",
+  "version": "1.0.0rc4",
   "private": true,
   "scripts": {
     "start": "vue-cli-service serve",
@@ -10,6 +10,7 @@
   "dependencies": {
     "copy-to-clipboard": "^3.3.1",
     "core-js": "^3.6.5",
+    "fuse.js": "^6.4.6",
     "jszip": "^3.7.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
