--- a/.eslintrc
+++ b/.eslintrc
@@ -35,6 +35,8 @@
       "no-duplicate-imports": ["error"],
       "@typescript-eslint/no-unused-vars": ["warn"],
       "@typescript-eslint/no-explicit-any": ["warn"],
-      "@typescript-eslint/no-use-before-define": ["error"]
+      "@typescript-eslint/no-use-before-define": ["error"],
+
+      "vue/no-unused-components": "warn"
     }
   }
