--- a/.github/workflows/build-vue.yml
+++ b/.github/workflows/build-vue.yml
@@ -11,6 +11,9 @@ on:
       - '**.js'
       - '**.json'
       - '**.mscz'
+      - '**.conf'
+      - 'Dockerfile'
+      - '.Dockerignore'
       - '**/build-vue.yml'
   pull_request:
     branches: [ main, vue ]
@@ -20,6 +23,12 @@ on:
         description: "Skip svg optimization (faster) (this setting doesn't work)"
         required: true
         default: "false"
+
+env:
+  # Use docker.io for Docker Hub if empty
+  REGISTRY: ghcr.io
+  # github.repository as <account>/<repo>
+  IMAGE_NAME: fysiksektionen/sangbok-html
 
 jobs:
   build:
@@ -93,6 +102,8 @@ jobs:
     needs: sheet-music
     steps:
     - uses: actions/checkout@v2
+    - name: Install Zopfli
+      run: sudo apt-get install -y zopfli
     - name: Fetch sheet music artifacts
       uses: actions/download-artifact@v2
       with:
@@ -101,3 +112,47 @@ jobs:
     - name: Benchmark
       working-directory: .github/workflows
       run: ./compression-benchmark.sh
+
+  docker:
+    runs-on: ubuntu-latest
+    name: Build docker container (nginx)
+    needs: sheet-music
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Fetch sheet music artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: music-svgs
+          path: public/msvg
+      - name: Unpack sheet music artifacts
+        working-directory: public/msvg
+        run: mv svgs.json ../../src/assets/msvgs.json
+      # Login against a Docker registry except on PR
+      # https://github.com/docker/login-action
+      - name: Log into registry ${{ env.REGISTRY }}
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@28218f9b04b4f3f62068d7b6ce6ca5b26e35336c
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      # Extract metadata (tags, labels) for Docker
+      # https://github.com/docker/metadata-action
+      - name: Extract Docker metadata
+        id: meta
+        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+      # Build and push Docker image with Buildx (don't push on PR)
+      # https://github.com/docker/build-push-action
+      - name: Build and push Docker image
+        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        with:
+          context: .
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}-nginx
