Added Cache-Control for Dockerfile.

--- a/nginx.conf
+++ b/nginx.conf
@@ -23,14 +23,14 @@ http {
     sendfile        on;
     #tcp_nopush     on;
 
-    keepalive_timeout  65;
+    keepalive_timeout  65s;
 
     server {
         listen       80;
         listen  [::]:80;
         server_name  localhost;
 
-        gzip  on;
+        gzip on;
         gzip_types text/plain text/xml text/html application/xml application/javascript text/css image/svg+xml image/x-icon;
         gzip_static always;
 
@@ -39,15 +39,27 @@ http {
         location / {
             root   /usr/share/nginx/html;
             index  index.html index.htm;
-        }
 
-        location /sangbok/msvg/ {
-            root   /usr/share/nginx/html;
-            # Store msvg:s as gz-compressed files, and decompress if client does not support gzip encoding.
+            # Redirect /sangbok to /sangbok/
+            rewrite ^/sangbok$ sangbok/ permanent;
+
+            # I expect most clients to support gzip encoding, hence we can store the static files gzip-compressed
+            # and decompress dynamically if the client does not support it.
             # See https://blog.llandsmeer.com/tech/2019/08/29/precompression.html
             gzip_static always;
             gunzip on;
+
+            ##
+            ## Caching
+            ##
+            add_header Cache-Control public;
+
+            # These files have hashed filenames, hence there's no need to ask the server if they have changed
+            # since if they have, they will have a different name.
+            location ~* \.(?:css|js)$ {expires 1m;}
+            location /msvg/$ {expires 1m;}
         }
+
 
         #error_page  404              /404.html;
 
