--- a/nginx.conf
+++ b/nginx.conf
@@ -30,10 +30,6 @@ http {
         listen  [::]:80;
         server_name  localhost;
 
-        gzip on;
-        gzip_types text/plain text/xml text/html application/xml application/javascript text/css image/svg+xml image/x-icon;
-        gzip_static always;
-
         #access_log  /var/log/nginx/host.access.log  main;
 
         location / {
@@ -46,8 +42,14 @@ http {
             # I expect most clients to support gzip encoding, hence we can store the static files gzip-compressed
             # and decompress dynamically if the client does not support it.
             # See https://blog.llandsmeer.com/tech/2019/08/29/precompression.html
+            gzip on;
+            gzip_types text/plain text/xml text/html application/xml application/javascript text/css image/svg+xml image/x-icon;
             gzip_static always;
             gunzip on;
+
+            brotli on;
+            brotli_types text/plain text/xml text/html application/xml application/javascript text/css image/svg+xml image/x-icon;
+            brotli_static off; # We only store gzip:s, not br:s, as of now, hence we only use dynamic re-encoding.
 
             ##
             ## Caching
