--- a/nginx.conf
+++ b/nginx.conf
@@ -36,8 +36,9 @@ http {
             root   /usr/share/nginx/html;
             index  index.html index.htm;
 
-            # Redirect /sangbok to /sangbok/
+            # Redirects
             rewrite ^/sangbok$ sangbok/ permanent;
+            rewrite ^/$ sangbok/ redirect;
 
             # I expect most clients to support gzip encoding, hence we can store the static files gzip-compressed
             # and decompress dynamically if the client does not support it.
@@ -58,8 +59,8 @@ http {
 
             # These files have hashed filenames, hence there's no need to ask the server if they have changed
             # since if they have, they will have a different name.
-            location ~* \.(?:css|js)$ {expires 1m;}
-            location /msvg/$ {expires 1m;}
+            location ~* \.(?:css|js)$ {expires 1M;}
+            location /msvg/$ {expires 1M;}
         }
 
 
