--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "sangbok",
-  "version": "1.0.0rc5",
+  "version": "1.0.0rc6",
   "private": true,
   "scripts": {
     "start": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build --modern",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -42,7 +42,7 @@
   },
   "browserslist": [
     "> 1%",
-    "last 2 versions",
+    "last 3 versions",
     "not dead"
   ]
 }
