Container now accepts requests to / and /sangbok.

--- a/nginx.conf
+++ b/nginx.conf
@@ -33,12 +33,8 @@ http {
         #access_log  /var/log/nginx/host.access.log  main;
 
         location / {
-            root   /usr/share/nginx/html;
+            root   /usr/share/nginx/html/sangbok;
             index  index.html index.htm;
-
-            # Redirects
-            rewrite ^/sangbok$ sangbok/ permanent;
-            rewrite ^/$ sangbok/ redirect;
 
             # I expect most clients to support gzip encoding, hence we can store the static files gzip-compressed
             # and decompress dynamically if the client does not support it.
@@ -59,8 +55,8 @@ http {
 
             # These files have hashed filenames, hence there's no need to ask the server if they have changed
             # since if they have, they will have a different name.
-            location ~* \.(?:css|js)$ {expires 1M;}
-            location /msvg/$ {expires 1M;}
+            location ~* \.(?:css|js|min.svg)$ {expires 1M;}
+            location ~* /msvg/.*/\.svg$ {expires 1M;}
         }
 
 
