--- a/.github/workflows/build-vue.yml
+++ b/.github/workflows/build-vue.yml
@@ -115,7 +115,7 @@ jobs:
 
   docker:
     runs-on: ubuntu-latest
-    name: Build docker container (nginx)
+    name: Build docker containers
     needs: sheet-music
     permissions:
       contents: read
@@ -142,8 +142,8 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       # Extract metadata (tags, labels) for Docker
       # https://github.com/docker/metadata-action
-      - name: Extract Docker metadata
-        id: meta
+      - name: Extract Docker metadata (nginx)
+        id: meta_nginx
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
@@ -152,12 +152,29 @@ jobs:
             type=ref,event=branch
             type=edge,branch=vue
             type=sha
-      # Build and push Docker image with Buildx (don't push on PR)
-      # https://github.com/docker/build-push-action
-      - name: Build and push Docker image
+      - name: Build and push Docker image (nginx)
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
+          file: deploy/nginx/Dockerfile
           context: .
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ steps.meta_nginx.outputs.tags }}
+          labels: ${{ steps.meta_nginx.outputs.labels }}
+      # Same, but for statigz
+      - name: Extract Docker metadata (statigz)
+        id: meta_statigz
+        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: | 
+            type=raw,value=latest-statigz,enable=${{ github.ref == 'refs/heads/main' }}
+            type=raw,value=edge-statigz,enable=${{ github.ref == 'refs/heads/vue' }}
+            type=sha
+      - name: Build and push Docker image (statigz)
+        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        with:
+          file: deploy/nginx/Dockerfile
+          context: .
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta_statigz.outputs.tags }}
+          labels: ${{ steps.meta_statigz.outputs.labels }}
