--- a/.github/workflows/build-vue.yml
+++ b/.github/workflows/build-vue.yml
@@ -19,11 +19,11 @@ on:
   pull_request:
     branches: [ main, vue ]
   workflow_dispatch:
-    inputs:
-      skip-compression:
-        description: "Skip svg optimization (faster) (this setting doesn't work)"
-        required: true
-        default: "false"
+    # inputs:
+    #   skip-compression:
+    #     description: "Skip svg optimization (faster) (this setting doesn't work)"
+    #     required: true
+    #     default: "false"
 
 env:
   # Use docker.io for Docker Hub if empty
@@ -80,14 +80,17 @@ jobs:
       run: npm install -g svgo
     - name: Install MuseScore 3
       run: sudo apt-get update && sudo apt-get install musescore3
-    - name: Convert mscz to non-compressed svg:s
+    - name: Unpack cached svg:s
+      run: rm -rf svg && tar -xJf svg.tar.lzma
       working-directory: ./music
-      run: ./convert.sh --no-move --force
-      if: ${{ contains(github.event.inputs.skip-compression, 'true') }}
-    - name: Convert mscz to compressed svg:s
+    - name: Convert mscz to compressed svg:s (from cache)
+      working-directory: ./music
+      run: ./convert.sh --compress --no-move
+      if: ${{ github.ref != 'refs/heads/main' }}
+    - name: Convert mscz to compressed svg:s (from scratch)
       working-directory: ./music
       run: ./convert.sh --compress --no-move --force
-      if: ${{ !contains(github.event.inputs.skip-compression, 'true') }}
+      if: ${{ github.ref == 'refs/heads/main' }}
     - name: Perpare for export
       working-directory: ./music
       run: mv svgs.json svg
@@ -113,11 +116,30 @@ jobs:
     - name: Benchmark
       working-directory: .github/workflows
       run: ./compression-benchmark.sh
-
+  
+  ##
+  ## Docker build
+  ##
   docker:
     runs-on: ubuntu-latest
-    name: Build docker containers
+    name: Build Docker containers
     needs: sheet-music
+    strategy:
+      fail-fast: false
+      matrix:
+        variant: [nginx, nginx-gz, statigz]
+        include:
+          - variant: nginx-gz
+            suffix: -nginx-gz
+            compression: gzip
+            server: nginx
+          - variant: nginx
+            compression: redundant gzip/brotli
+            server: nginx
+          - variant: statigz
+            suffix: -statigz
+            compression: brotli
+            server: statigz
     permissions:
       contents: read
       packages: write
@@ -132,8 +154,7 @@ jobs:
       - name: Unpack sheet music artifacts
         working-directory: public/msvg
         run: mv svgs.json ../../src/assets/msvgs.json
-      # Login against a Docker registry except on PR
-      # https://github.com/docker/login-action
+      # Login against a Docker registry except on PR(https://github.com/docker/login-action)
       - name: Log into registry ${{ env.REGISTRY }}
         if: github.event_name != 'pull_request'
         uses: docker/login-action@28218f9b04b4f3f62068d7b6ce6ca5b26e35336c
@@ -141,42 +162,24 @@ jobs:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      # Extract metadata (tags, labels) for Docker
-      # https://github.com/docker/metadata-action
-      - name: Extract Docker metadata (nginx)
-        id: meta_nginx
+      # Extract metadata (tags, labels) for Docker (https://github.com/docker/metadata-action)
+      - name: Extract Docker metadata
+        id: meta
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: | 
             type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' }}
-            type=ref,event=branch
             type=edge,branch=vue
+            type=ref,event=branch
             type=sha
-      - name: Build and push Docker image (nginx)
+          flavor: |
+            suffix=${{ matrix.suffix }}
+      - name: Build and push Docker image (${{ matrix.server }} with ${{ matrix.compression }} precompression)
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
-          file: deploy/nginx/Dockerfile
+          file: docker/${{ matrix.variant }}/Dockerfile
           context: .
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta_nginx.outputs.tags }}
-          labels: ${{ steps.meta_nginx.outputs.labels }}
-      # Same, but for statigz
-      - name: Extract Docker metadata (statigz)
-        id: meta_statigz
-        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          tags: | 
-            type=raw,value=latest-statigz,enable=${{ github.ref == 'refs/heads/main' }}
-            type=raw,value=statigz,enable=${{ github.ref == 'refs/heads/main' }}
-            type=raw,value=edge-statigz,enable=${{ github.ref == 'refs/heads/vue' }}
-            type=sha
-      - name: Build and push Docker image (statigz)
-        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
-        with:
-          file: deploy/statigz/Dockerfile
-          context: .
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta_statigz.outputs.tags }}
-          labels: ${{ steps.meta_statigz.outputs.labels }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
