Updated nginx logging config.

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -14,9 +14,10 @@ http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
+    log_format  main  '$remote_addr - [$time_local] "$request" '
+                      '- $status ($sent_http_content_encoding, ${body_bytes_sent}B) '
+                      ' - "$http_referer" "$http_x_forwarded_for" "$http_user_agent"';
+                      # $request_time, "$sent_http_content_encoding" "$http_accept_encoding"
 
     access_log  /var/log/nginx/access.log  main;
 
