Added THS chapter.

--- a/docker/nginx-gz/nginx.conf
+++ b/docker/nginx-gz/nginx.conf
@@ -14,9 +14,10 @@ http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
-    log_format  main  '$remote_addr - [$time_local] "$request" '
-                      '- $status ($http_accept_encoding -> $sent_http_content_encoding, ${body_bytes_sent}B) '
-                      ' - "$http_referer" "$http_x_forwarded_for" "$http_user_agent"';
+    log_format  main  '[$time_local] - $status - ($http_accept_encoding -> $sent_http_content_encoding) - $remote_addr/$http_x_forwarded_for - $request'
+                      #'$remote_addr - [$time_local] "$request" '
+                      #'- $status ($http_accept_encoding -> $sent_http_content_encoding, ${body_bytes_sent}B) '
+                      #'- "$http_referer" "$http_x_forwarded_for" "$http_user_agent"';
                       # $request_time, "$sent_http_content_encoding" "$http_accept_encoding"
 
     access_log  /var/log/nginx/access.log  main;
@@ -41,12 +42,12 @@ http {
             # and decompress dynamically if the client does not support it.
             # See https://blog.llandsmeer.com/tech/2019/08/29/precompression.html
             gzip on;
-            gzip_types text/plain text/xml text/html application/xml application/javascript text/css image/svg+xml image/x-icon;
+            gzip_types text/plain text/xml application/xml application/javascript text/css image/svg+xml image/x-icon; # text/html is enabled by default, so we don't need to enable it explicitly
             gzip_static always;
             gunzip on;
 
             brotli on;
-            brotli_types text/plain text/xml text/html application/xml application/javascript text/css image/svg+xml image/x-icon;
+            brotli_types text/plain text/xml application/xml application/javascript text/css image/svg+xml image/x-icon;
             brotli_static off; # We only store gzip:s, not br:s, as of now, hence we only use dynamic re-encoding.
 
             ##
