--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sangbok",
-  "version": "1.0.0rc9",
+  "version": "1.1.0-alpha1",
   "private": true,
   "scripts": {
     "start": "vue-cli-service serve",
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "fuse.js": "^6.4.6",
     "jszip": "^3.7.1",
+    "qr.js": "^0.0.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vue3-touch-events": "^4.1.0",
