--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -11,6 +11,7 @@ events {
 
 
 http {
+    server_tokens off;
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
@@ -44,6 +45,7 @@ http {
             gzip on;
             gzip_types text/plain text/xml application/xml application/javascript text/css image/svg+xml image/x-icon; # text/html is enabled by default, so we don't need to enable it explicitly
             gzip_static on;
+            gzip_vary on;
 
             brotli on;
             brotli_types text/plain text/xml application/xml application/javascript text/css image/svg+xml image/x-icon;
@@ -53,11 +55,30 @@ http {
             ## Caching
             ##
             add_header Cache-Control public;
+            
+            # Likely, people will use this page for about 3h at a time, so setting the expires to anything less than
+            # 3h does not prevent the browser from e.g. requesting non-existent script chunks or sheet music svgs.
+            # Just make sure to update the site in the middle of the night instead.
+            location ~* /index.html {
+                internal;
+                expires 4h;
+                # Unsafe-eval is used by webpack. You should not be using it.
+                add_header Content-Security-Policy "script-src 'self' 'unsafe-eval' 'sha256-4RS22DYeB7U14dra4KcQYxmwt5HkOInieXK1NUMBmQI='; font-src 'self' fonts.gstatic.com; media-src 'self';";
+            }
+            location ~* /favicon\.ico {expires 1M;}
 
             # These files have hashed filenames, hence there's no need to ask the server if they have changed
             # since if they have, they will have a different name.
-            location ~* \.(?:css|js|min.svg)$ {expires 1M;}
+            location ~* \.(?:css|js|min\.svg)$ {expires 1M;}
             location ~* /msvg/.*/\.svg$ {expires 1M;}
+
+            ##
+            ## Misc. headeres
+            ##
+            add_header X-Frame-Options SAMEORIGIN;
+            add_header X-Content-Type-Options nosniff;
+            # add_header Content-Security-Policy "script-src 'self' 'sha256-4RS22DYeB7U14dra4KcQYxmwt5HkOInieXK1NUMBmQI='; font-src 'self' fonts.gstatic.com; media-src 'self';";
+            # add_header Strict-Transport-Security max-age=14400;
         }
 
 
