--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -16,6 +16,7 @@ http {
     default_type  application/octet-stream;
 
     log_format  main  '[$time_local] - $status - $sent_http_content_encoding - $remote_addr/$http_x_forwarded_for - $request'
+                      # Default value below:
                       # '$remote_addr - [$time_local] "$request" '
                       # '- $status ($sent_http_content_encoding, ${body_bytes_sent}B) '
                       # '- "$http_referer" "$http_x_forwarded_for" "$http_user_agent"';
@@ -29,6 +30,7 @@ http {
     keepalive_timeout  65s;
 
     server {
+        # Listen both on ipv4 and ipv6, port 80
         listen       80;
         listen  [::]:80;
         server_name  localhost;
@@ -36,7 +38,7 @@ http {
         #access_log  /var/log/nginx/host.access.log  main;
 
         location / {
-            root   /usr/share/nginx/html/sangbok;
+            root   /usr/share/nginx/html/sangbok; # Not sure if this is correct, but it works.
             index  index.html index.htm;
 
             # I expect most clients to support gzip encoding, hence we can store the static files gzip-compressed
@@ -47,6 +49,7 @@ http {
             gzip_static on;
             gzip_vary on;
 
+            # We also store pre-compressed brotli files.
             brotli on;
             brotli_types text/plain text/xml application/xml application/javascript text/css image/svg+xml image/x-icon;
             brotli_static on;
@@ -62,7 +65,9 @@ http {
             location ~* /index.html {
                 internal;
                 expires 4h;
-                # Unsafe-eval is used by webpack. You should not be using it.
+
+                # CSP. Only allows scripts directly from the server, and inline scripts with the listed hashes. (Makes XSS/JS injection harder).
+                # Unsafe-eval is used by webpack. We should not be using it.
                 add_header Content-Security-Policy "script-src 'self' 'unsafe-eval' 'sha256-4RS22DYeB7U14dra4KcQYxmwt5HkOInieXK1NUMBmQI='; font-src 'self' fonts.gstatic.com; media-src 'self';";
             }
             location ~* /favicon\.ico {expires 1M;}
@@ -73,7 +78,7 @@ http {
             location ~* /msvg/.*/\.svg$ {expires 1M;}
 
             ##
-            ## Misc. headeres
+            ## Misc. headers (security)
             ##
             add_header X-Frame-Options SAMEORIGIN;
             add_header X-Content-Type-Options nosniff;
