--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -27,7 +27,12 @@ jobs:
     - name: Install packages
       run: npm ci
     - name: Unpack cached svg:s
-      run: rm -rf svg && tar -xJf svg.tar.lzma
+      run: rm -rf svg && tar -xJf svg.tar.lzma && ./convert.sh --no-generate
       working-directory: ./music
     - name: Run tests
-      run: npm run test
+      run: npx jest --ci --coverage && npx codecov
+    # - name: Codecov
+    #   uses: codecov/codecov-action@v2
+    #   with:
+    #     token: ${{ secrets.CODECOV_TOKEN }}
+# TODO: svgs are not moved right now...
