--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@vue/eslint-config-typescript": "^7.0.0",
     "@vue/test-utils": "^2.0.0-rc.16",
     "babel-jest": ">=25.2.6",
+    "codecov": "^3.8.3",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
