--- a/.github/workflows/build-vue.yml
+++ b/.github/workflows/build-vue.yml
@@ -39,7 +39,8 @@ jobs:
     needs: sheet-music
     strategy:
       matrix:
-        node-version: [16.x, "17.x"]
+        node-version: [16.x, 17.x]
+      fail-fast: false
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
@@ -101,22 +102,22 @@ jobs:
         name: music-svgs
         path: music/svg
 
-  compression-benchmark:
-    runs-on: ubuntu-latest
-    name: Check compression ratios
-    needs: sheet-music
-    steps:
-    - uses: actions/checkout@v2
-    - name: Install Zopfli
-      run: sudo apt-get install -y zopfli
-    - name: Fetch sheet music artifacts
-      uses: actions/download-artifact@v2
-      with:
-        name: music-svgs
-        path: .github/workflows/svg
-    - name: Benchmark
-      working-directory: .github/workflows
-      run: ./compression-benchmark.sh
+#   compression-benchmark:
+#     runs-on: ubuntu-latest
+#     name: Check compression ratios
+#     needs: sheet-music
+#     steps:
+#     - uses: actions/checkout@v2
+#     - name: Install Zopfli
+#       run: sudo apt-get install -y zopfli
+#     - name: Fetch sheet music artifacts
+#       uses: actions/download-artifact@v2
+#       with:
+#         name: music-svgs
+#         path: .github/workflows/svg
+#     - name: Benchmark
+#       working-directory: .github/workflows
+#       run: ./compression-benchmark.sh
   
   ##
   ## Docker build
