--- a/.github/workflows/build-vue.yml
+++ b/.github/workflows/build-vue.yml
@@ -38,9 +38,9 @@ jobs:
     name: Build vue
     needs: sheet-music
     strategy:
-      matrix:
-        node-version: [16.x, 17.x]
       fail-fast: false
+      matrix:
+        node-version: [14.x, 16.x]
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
@@ -129,17 +129,21 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        variant: [nginx, nginx-gz, statigz]
+        variant: [nginx, nginx-gz, statigz, nginx-prpc]
         include:
+          - variant: nginx-prpc
+            compression: semi-redundant gzip/brotli
+            server: nginx
           - variant: nginx-gz
-            suffix: -slim-nginx
+            suffix: -nginx-gz
             compression: gzip
             server: nginx
           - variant: nginx
+            suffix: -nginx-gz-br
             compression: redundant gzip/brotli
             server: nginx
           - variant: statigz
-            suffix: -slim
+            suffix: -statigz-br
             compression: brotli
             server: statigz
     permissions:
