--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -46,8 +46,9 @@ http {
             # See https://blog.llandsmeer.com/tech/2019/08/29/precompression.html
             gzip on;
             gzip_types text/plain text/xml application/xml application/javascript text/css image/svg+xml image/x-icon; # text/html is enabled by default, so we don't need to enable it explicitly
-            gzip_static on;
+            gzip_static always;
             gzip_vary on;
+            gunzip on;
 
             # We also store pre-compressed brotli files.
             brotli on;
