--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -69,7 +69,8 @@ http {
 
                 # CSP. Only allows scripts directly from the server, and inline scripts with the listed hashes. (Makes XSS/JS injection harder).
                 # Unsafe-eval is used by webpack. We should not be using it.
-                add_header Content-Security-Policy "script-src 'self' 'unsafe-eval' 'sha256-4RS22DYeB7U14dra4KcQYxmwt5HkOInieXK1NUMBmQI='; font-src 'self' fonts.gstatic.com; media-src 'self';";
+                # Unsafe-inline is a fallback, and is only used by browsers that don't support unsafe-hashes.
+                add_header Content-Security-Policy "script-src 'self' 'unsafe-eval' 'sha256-4RS22DYeB7U14dra4KcQYxmwt5HkOInieXK1NUMBmQI=' 'unsafe-inline'; font-src 'self' fonts.gstatic.com; media-src 'self'; object-src 'none';";
             }
             location ~* /favicon\.ico {expires 1M;}
 
