--- a/docker/nginx-gz/nginx.conf
+++ b/docker/nginx-gz/nginx.conf
@@ -68,7 +68,8 @@ http {
 
                 # CSP. Only allows scripts directly from the server, and inline scripts with the listed hashes. (Makes XSS/JS injection harder).
                 # Unsafe-eval is used by webpack. We should not be using it.
-                add_header Content-Security-Policy "script-src 'self' 'unsafe-eval' 'sha256-4RS22DYeB7U14dra4KcQYxmwt5HkOInieXK1NUMBmQI='; font-src 'self' fonts.gstatic.com; media-src 'self';";
+                # unsafe-inline is a fallback only used by browsers not supporting hashes (i.e. Firefox as of 2022)
+                add_header Content-Security-Policy "script-src 'self' 'unsafe-eval' 'sha256-4RS22DYeB7U14dra4KcQYxmwt5HkOInieXK1NUMBmQI=' 'unsafe-inline'; font-src 'self' fonts.gstatic.com; media-src 'self';";
             }
             location ~* /favicon\.ico {expires 7d;}
             
