--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-plugin-unit-jest": "^4.5.15",
+    "@vue/cli-plugin-unit-jest": "4.x",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
@@ -47,12 +47,12 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^7.0.0",
-    "jest": ">=25.3.1",
+    "jest": "26.x",
     "jest-expect-message": "^1.0.2",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
-    "ts-jest": ">=25.3.1",
-    "typescript": ">=3.8",
+    "ts-jest": "26.x",
+    "typescript": "4.x",
     "vue-jest": "^5.0.0-alpha.1"
   },
   "browserslist": [
@@ -62,17 +62,29 @@
   ],
   "jest": {
     "preset": "@vue/cli-plugin-unit-jest/presets/typescript-and-babel",
-    "transform": { "^.+\\.vue$": "vue-jest" },
+    "transform": {
+      "^.+\\.vue$": "vue-jest"
+    },
     "transformIgnorePatterns": [
       "node_modules/(?!@ngrx|(?!deck.gl)|ng-dynamic)",
       "node_modules/(?!vue3-touch-events)"
     ],
-    "testMatch": [ "**/*.test.[jt]s?(x)" ],
-    "moduleFileExtensions": ["vue", "js", "json", "jsx", "ts", "tsx", "node"],
+    "testMatch": [
+      "**/*.test.[jt]s?(x)"
+    ],
+    "moduleFileExtensions": [
+      "vue",
+      "js",
+      "json",
+      "jsx",
+      "ts",
+      "tsx",
+      "node"
+    ],
     "moduleNameMapper": {
-        "\\.(jpg|ico|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/src/utils/dummy.ts",
-        "\\.(css|less)$": "<rootDir>/src/utils/dummy.ts",
-        "^@/(.*)$": "<rootDir>/src/$1"
+      "\\.(jpg|ico|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/src/utils/dummy.ts",
+      "\\.(css|less)$": "<rootDir>/src/utils/dummy.ts",
+      "^@/(.*)$": "<rootDir>/src/$1"
     }
   }
 }
