--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sangbok",
-  "version": "1.2.0-beta2",
+  "version": "1.2.0-beta2-jsx",
   "private": true,
   "scripts": {
     "start": "vue-cli-service serve",
