Updated build workflow.

--- a/docker/nginx/nginx.gz.conf
+++ b/docker/nginx/nginx.gz.conf
@@ -15,7 +15,7 @@ http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
-    log_format  main  '[$time_local] - $status - $sent_http_content_encoding - $remote_addr/$http_x_forwarded_for - $request'
+    log_format  main  '[$time_local] - $status - ($http_accept_encoding -> $sent_http_content_encoding) - $remote_addr/$http_x_forwarded_for - $request'
                       # Default value below:
                       # '$remote_addr - [$time_local] "$request" '
                       # '- $status ($sent_http_content_encoding, ${body_bytes_sent}B) '
@@ -50,10 +50,10 @@ http {
             gzip_vary on;
             gunzip on;
 
-            # We also store pre-compressed brotli files.
+            # We support dynamic brotli-re-encoding, but not precompression.
             brotli on;
             brotli_types text/plain text/xml application/xml application/javascript text/css image/svg+xml image/x-icon;
-            brotli_static on;
+            brotli_static off; # We only store gzip:s, not br:s, hence we only use dynamic brotli re-encoding, not pre-compression.
 
             ##
             ## Caching
@@ -72,8 +72,8 @@ http {
                 # Unsafe-inline is a fallback, and is only used by browsers that don't support unsafe-hashes.
                 add_header Content-Security-Policy "script-src 'self' 'unsafe-eval' 'sha256-4RS22DYeB7U14dra4KcQYxmwt5HkOInieXK1NUMBmQI=' 'unsafe-inline'; font-src 'self' fonts.gstatic.com; media-src 'self'; object-src 'none';";
             }
-            location ~* /favicon\.ico {expires 1M;}
-
+            location ~* /favicon\.ico {expires 14d;}
+            
             # These files have hashed filenames, hence there's no need to ask the server if they have changed
             # since if they have, they will have a different name.
             location ~* \.(?:css|js|min\.svg)$ {expires 1M;}
