--- a/.github/workflows/build-vue.yml
+++ b/.github/workflows/build-vue.yml
@@ -129,16 +129,19 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        variant: [nginx, nginx-gz, nginx-gz-br]
+        variant: [default, gz, gz-br]
         include:
-          - variant: nginx
+          - variant: default
             compression: semi-redundant gzip/brotli
-          - variant: nginx-gz
+            server: nginx
+          - variant: gz
             suffix: -nginx-gz
             compression: gzip
-          - variant: nginx-gz-br
+            server: nginx
+          - variant: gz-br
             suffix: -nginx-gz-br
             compression: redundant gzip/brotli
+            server: nginx
     permissions:
       contents: read
       packages: write
@@ -173,10 +176,10 @@ jobs:
             type=ref,event=branch
           flavor: |
             suffix=${{ matrix.suffix }}
-      - name: Build and push Docker image (nginx with ${{ matrix.compression }} precompression)
+      - name: Build and push Docker image (${{ matrix.server }} with ${{ matrix.compression }} precompression)
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
-          file: docker/${{ matrix.variant }}/Dockerfile
+          file: docker/${{ matrix.server }}/${{ matrix.variant }}.Dockerfile
           context: .
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
