--- a/docker/nginx/nginx.gz-br.conf
+++ b/docker/nginx/nginx.gz-br.conf
@@ -15,11 +15,11 @@ http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
-    log_format  main  '[$time_local] - $status - ($http_accept_encoding -> $sent_http_content_encoding) - $remote_addr/$http_x_forwarded_for - $request'
+    log_format  main  '[$time_local] - $status - $sent_http_content_encoding - $remote_addr/$http_x_forwarded_for - $request'
                       # Default value below:
-                      #'$remote_addr - [$time_local] "$request" '
-                      #'- $status ($http_accept_encoding -> $sent_http_content_encoding, ${body_bytes_sent}B) '
-                      #'- "$http_referer" "$http_x_forwarded_for" "$http_user_agent"';
+                      # '$remote_addr - [$time_local] "$request" '
+                      # '- $status ($sent_http_content_encoding, ${body_bytes_sent}B) '
+                      # '- "$http_referer" "$http_x_forwarded_for" "$http_user_agent"';
                       # $request_time, "$sent_http_content_encoding" "$http_accept_encoding"
 
     access_log  /var/log/nginx/access.log  main;
@@ -47,12 +47,13 @@ http {
             gzip on;
             gzip_types text/plain text/xml application/xml application/javascript text/css image/svg+xml image/x-icon; # text/html is enabled by default, so we don't need to enable it explicitly
             gzip_static always;
-            gunzip on;
             gzip_vary on;
+            gunzip on;
 
+            # We also store pre-compressed brotli files.
             brotli on;
             brotli_types text/plain text/xml application/xml application/javascript text/css image/svg+xml image/x-icon;
-            brotli_static off; # We only store gzip:s, not br:s, hence we only use dynamic brotli re-encoding, not pre-compression.
+            brotli_static on;
 
             ##
             ## Caching
@@ -71,11 +72,11 @@ http {
                 # Unsafe-inline is a fallback, and is only used by browsers that don't support unsafe-hashes.
                 add_header Content-Security-Policy "script-src 'self' 'unsafe-eval' 'sha256-4RS22DYeB7U14dra4KcQYxmwt5HkOInieXK1NUMBmQI=' 'unsafe-inline'; font-src 'self' fonts.gstatic.com; media-src 'self'; object-src 'none';";
             }
-            location ~* /favicon\.ico {expires 7d;}
-            
+            location ~* /favicon\.ico {expires 14d;}
+
             # These files have hashed filenames, hence there's no need to ask the server if they have changed
             # since if they have, they will have a different name.
-            location ~* \.(?:css|js|min.svg)$ {expires 1M;}
+            location ~* \.(?:css|js|min\.svg)$ {expires 1M;}
             location ~* /msvg/.*/\.svg$ {expires 1M;}
 
             ##
