--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -8,7 +8,9 @@ on:
     paths:
       - '**.vue'
       - '**.ts'
+      - '**.tsx'
       - '**.js'
+      - '**.jsx'
       - '**.json'
       - '**/jest.yml'
   pull_request:
