--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sangbok",
-  "version": "1.2.0-beta3",
+  "version": "1.2.0-beta4",
   "private": true,
   "scripts": {
     "start": "vue-cli-service serve",
@@ -25,6 +25,7 @@
     "@types/jest": "26.x",
     "@types/jest-expect-message": "^1.0.3",
     "@types/qrcode": "^1.4.1",
+    "@types/serviceworker-webpack-plugin": "^1.0.3",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/babel-plugin-jsx": "^1.1.1",
@@ -51,9 +52,14 @@
     "jest-expect-message": "^1.0.2",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "serviceworker-webpack-plugin": "^1.0.1",
     "ts-jest": "26.x",
     "typescript": ">=3.8",
-    "vue-jest": "^5.0.0-alpha.1"
+    "vue-jest": "^5.0.0-alpha.1",
+    "workbox-expiration": "^6.5.3",
+    "workbox-precaching": "^6.5.3",
+    "workbox-routing": "^6.5.3",
+    "workbox-strategies": "^6.5.3"
   },
   "browserslist": [
     "> 1%",
